--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/adrianhelvik/container"
+  },
   "scripts": {
     "test": "jest --watch",
     "test:coverage": "jest --coverage",
