--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@adrianhelvik/mock": "^1.0.3",
     "coveralls": "^2.13.1",
     "jest": "^20.0.4"
   }
