--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "@adrianhelvik/container",
-  "version": "3.1.1",
+  "version": "3.1.2",
   "description": "",
   "main": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/adrianhelvik/container"
   },
+  "keywords": [
+    "dependency injection",
+    "adrianhelvik",
+    "dependency",
+    "container",
+    "injection"
+  ],
   "scripts": {
     "test": "jest --coverage",
     "start": "jest --watch",
